TwittorProject/K8S/twittorapi-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: twittorapiservice-srv
spec:
  type: NodePort
  selector:
    app: twittorapiservice
  ports:
  - name: twittorapiservice
    protocol: TCP
    port: 80
    targetPort: 80
