TwittorProject/K8S/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: devbootcamp-graph.id
    http:
      paths:
       - backend:
          service:
            name: twittorapi-clusterip-srv
            port: 
              number: 80
         path: /
         pathType: Prefix
       - backend:
          service:
            name: kafkaapp-clusterip-srv
            port:
              number: 80
         path: /app
         pathType: Prefix
       - backend:
          service:
            name: kafkalistening-clusterip-srv
            port:
              number: 80
         path: /listener
         pathType: Prefix
